# AutoETH

./: .gitignore  README.md  package-lock.json
backend/: judging_agent.py  main.py  pyproject.toml
frontend/: global.d.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(pages)/agents/: agents.css  page.tsx
frontend/app/(pages)/blocks/: page.tsx
frontend/app/(pages)/dashboard/: dashboard.css  page.tsx
frontend/app/(pages)/home/: page.tsx
frontend/app/(pages)/leaderboard/: page.tsx
frontend/app/(pages)/live/: page.tsx
frontend/app/(pages)/login/: page.tsx
frontend/app/(pages)/onboarding/: page.tsx
frontend/app/api/agent/: route.ts
frontend/app/components/: Header.jsx  ModelViewer.jsx  ModelViewer.tsx  Navbar.css  Navbar.jsx  Navbars.jsx  Sidebar.css  Sidebar.tsx  WalletButton.jsx  features.tsx  footer.tsx  hero.tsx  info.tsx  nav.tsx  simplifies.tsx
frontend/app/context/: WalletContext.tsx
frontend/app/hooks/: useLiveRound.ts
frontend/app/pages/: home.tsx  live.tsx
frontend/app/pages/components/: footer.tsx  nav.tsx
frontend/app/types/: global.d.ts
frontend/public/img/: mybg.lottie
hardhat_contract/: hardhat.config.ts  package-lock.json  package.json
hardhat_contract/contracts/: POIToken.sol  ProofOfIntelligence.sol
hardhat_contract/ignition/modules/: ProofOfIntelligence.ts
hardhat_contract/scripts/: deploy-sepolia.mjs  deploy-testnet.mjs
hardhat_contract/test/: ProofOfIntelligenceTest.t.sol
